fix: On Tablet Layout, The top margin offset from h1 has been replaced with padding affecting both top and bottom of the About Me section text content

--- a/styles/style.css
+++ b/styles/style.css
@@ -111,21 +111,23 @@ section {
 
         position: absolute;
         top: 10px;
-        left: 60px;
+        left: 20px;
 
         img {
             max-width: 300px;
         }
     }
 
+    .about {
+        padding: 48px 0px;
+    }
+
     .description {
         margin-top: 104px;
 
-        max-width: 80%;
+        max-width: 85%;
 
         h1 {
-            margin-top: 64px;
-
             text-align: center;
         }
 
@@ -133,7 +135,7 @@ section {
             display: inline;
             float: left;
 
-            width: 260px;
+            width: 250px;
             height: 320px;
         }
     }
